--- a/calculator.html
+++ b/calculator.html
@@ -12,8 +12,7 @@
     <![endif]-->
     <script src="assets/javascripts/jquery.min.js"></script>
     <script src="assets/javascripts/rangeslider.min.js"></script>
-    <script src="assets/javascripts/calculator.js"></script>
-    <link rel="stylesheet" type="text/css" href="assets/stylesheets/calculator.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/calculator.min.css"/>
     <!-- Add goog Analytics tracking -->
     <!-- Increment/Decrement icons courtesy of Font Awesome: https://fontawesome.com/license -->
   </head>
