--- a/calculator.html
+++ b/calculator.html
@@ -13,10 +13,10 @@
     <script src="assets/javascripts/jquery.min.js"></script>
     <script src="assets/javascripts/rangeslider.min.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/calculator.min.css"/>
-    <!-- Add goog Analytics tracking -->
     <!-- Increment/Decrement icons courtesy of Font Awesome: https://fontawesome.com/license -->
   </head>
   <body>
+    <div class="corner-ribbon top-right sticky blue"><a href="http://dpmehta.com">By Dev</a></div>
     <div class="container">
       <!-- <h3>Convert your annual salary into an hourly rate.</h3> -->
       <!-- Pulse the hourly total (and color quickly) if assumption updated, both annual and hourly if slider adjusted, only equiv on page load -->
